--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - echo "Log in to Amazon ECR..."
-      - $(aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_URI)
+      - $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_URI)
 
   build:
     commands:
